# mt5_adapter

./: README.md  pyproject.toml
mt5_adapter/: account.py  client.py  config.py  constant.py  history.py  log.py  model.py  symbol.py  terminal.py  trade.py  trade_parallel.py  utils.py  wrappers.py
terminal/: client.py  main.py  model.py  trade.py  utils.py  wrappers.py
tests/: test_account.py  test_history.py  test_info.py  test_model.py  test_parralel.py  test_symbol.py  test_terminal.py  test_trade.py
