[tool.poetry]
name = "mt5_adapter"
version = "0.1.0"
description = ""
authors = ["Albu Mircea <albu.mirceav@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
MetaTrader5 = "^5.0.37"
loguru = "^0.6.0"
ujson = "^5.2.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
